@@ -59,7 +59,12 @@ public:
     bool hasSetPosition() const;
     Object position() const;
     bool setPosition(int64_t position);
-    File* getFile() { return NULL; }
+    File* getFile() { return file_; }
+    ucs4string getLastErrorMessage()
+    {
+        return file_->getLastErrorMessage();
+    }
+
 
 private:
     enum {
